...
    <!-- HomeScreen -->
    <string name="home_title">Home</string>
    <string name="home_description">This application demonstrates a variety of accessibility best practices for Jetpack Compose-based UIs, as well as the problems they can address.</string>
    <string name="home_description_2">Use the cards below to pick a topic area and follow the directions on the screen regarding the assistive technology employed in that demonstration.</string>
    <string name="home_informative_content">Informative Content</string>
    <string name="home_interactive_behaviors">Interactive Behaviors</string>
    <string name="home_components">Specific Component Types</string>
    <string name="home_navigation_click_label">see details</string>

    <!-- Text alternatives -->
    <string name="text_alternatives_title">Text alternatives</string>
    <string name="text_alternatives_heading">Provide text alternatives for non-text content when appropriate</string>
    <string name="text_alternatives_description_1">All informative non-text content must have a text alternative associated with it, generally via the contentDescription property. Purely decorative content that conveys no meaning must be marked as such with a null contentDescription.</string>
...
    <string name="scrolling_interactive_columns_item_28">Yangmei</string>
    <string name="scrolling_interactive_columns_last_item_label">Last item</string>
    <string name="scrolling_interactive_columns_last_item_button_label">Test</string>
    <string name="scrolling_interactive_columns_last_item_button_message">Last item button pressed.</string>

    <!-- Accordion controls -->
    <string name="accordion_title">Accordion controls</string>
    <string name="accordion_heading">Accordion controls require an expand or collapse semantics property</string>
    <string name="accordion_description_1">Accordion controls must declare the appropriate Modifier.semantics expand() or collapse() action property, depending on their collapsed/expanded state, in addition to any tap to toggle action.</string>
    <string name="accordion_description_2">There are many ways to code these controls - as layout elements or list items, but all require this additional semantics in order to announce their expanded/collapsed state.</string>
    <string name="accordion_description_3">Turn on TalkBack, navigate the page, and activate the controls for a demonstration. Listen for expanded/collapsed state announcement as well as special expand/collapse actions.</string>
    <string name="accordion_section_1">Bad example 1: Accordion without expand/collapse actions</string>
    <string name="accordion_item_1_1">Incorrect Accordion example, Item 1</string>
    <string name="accordion_item_1_2">Incorrect Accordion example, Item 2</string>
    <string name="accordion_item_1_3">Incorrect Accordion example, Item 3</string>
    <string name="accordion_section_2">Good example 2: Accordion with expand/collapse actions</string>
    <string name="accordion_item_2_1">Correct Accordion example, Item 1</string>
    <string name="accordion_item_2_2">Correct Accordion example, Item 2</string>
    <string name="accordion_item_2_3">Correct Accordion example, Item 3</string>

    <!-- Autofill controls -->
    <string name="autofill_title">Autofill controls</string>
...
